--- a/css/all.css
+++ b/css/all.css
@@ -1303,6 +1303,36 @@ body {
           transform: rotate(-45deg);
 }
 
+.onloading {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: 999;
+  position: fixed;
+  top: 0;
+  left: 0;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  display: none;
+}
+
+.onloading.on {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.onloading > div {
+  width: 100px;
+  height: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
 @-webkit-keyframes pudding {
   0% {
     -webkit-transform: scaleX(1);
@@ -2069,6 +2099,9 @@ body {
   min-width: 100px;
   padding: 0 10px;
   height: 36px;
+  line-height: 36px;
+  text-align: center;
+  display: block;
   background: transparent;
   outline: none;
   border: none;
@@ -2082,6 +2115,7 @@ body {
   font-weight: bold;
   letter-spacing: 1px;
   margin-bottom: 15px;
+  display: inline-block;
 }
 
 .mainMsg > div + div {
@@ -2445,8 +2479,8 @@ body {
 .fullList li .fullList_msg .more {
   color: #ff0000;
   cursor: pointer;
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 @media (any-hover: hover) {
@@ -2456,7 +2490,7 @@ body {
 }
 
 .fullList li + li::before {
-  content: '';
+  content: "";
   width: 100%;
   height: 1px;
   background-color: #c5c4c4;
@@ -2465,6 +2499,272 @@ body {
   position: absolute;
   top: 0;
   left: 0;
+}
+
+.broadcast .liveBox {
+  padding: 40px 10px 20px;
+  background-color: #242424;
+}
+
+.broadcast .liveBox .liveTitle {
+  width: 150px;
+  padding: 5px 0;
+  margin: 0 auto 20px;
+  border-radius: 10px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  background-color: #fff;
+  color: #000;
+  display: inline-block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.broadcast .liveBox .liveTitle img {
+  width: 66px;
+  padding-bottom: 3px;
+}
+
+.broadcast .liveBox .liveList {
+  margin-bottom: 40px;
+}
+
+.broadcast .liveBox .liveList ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.broadcast .liveBox .liveList li {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 0 10px;
+}
+
+.broadcast .liveBox .liveList li > div {
+  height: 100%;
+  padding-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-shadow: 2px 2px 10px #000;
+          box-shadow: 2px 2px 10px #000;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.broadcast .liveBox .liveList li:hover > div {
+  -webkit-transform: translateY(-4px);
+          transform: translateY(-4px);
+  background-color: #fff;
+  color: #000;
+}
+
+.broadcast .liveBox .liveList .liveList_mv {
+  width: 100%;
+  height: 0;
+  padding-bottom: calc(100% / 1.775);
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.broadcast .liveBox .liveList .liveList_mv iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.broadcast .liveBox .liveList .liveList_msg {
+  padding: 0 10px;
+  font-size: 0.95rem;
+  line-height: 24px;
+  font-weight: bold;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
+
+.broadcast .liveBox .liveBtn {
+  text-align: center;
+}
+
+.broadcast .liveBox .liveBtn .btn {
+  width: 150px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 40px;
+}
+
+.broadcast .videoBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.broadcast .gameShow {
+  width: calc(100% - 250px);
+  margin-right: 20px;
+}
+
+.broadcast .gameShow .main {
+  width: calc(100% - 10px);
+  height: 0;
+  padding-bottom: calc(100% / 1.775);
+  position: relative;
+  margin: 0 auto 10px;
+}
+
+.broadcast .gameShow .main iframe {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.broadcast .gameShow .list {
+  position: relative;
+  min-height: 50px;
+}
+
+.broadcast .gameShow .list .arrow_l,
+.broadcast .gameShow .list .arrow_r {
+  width: 40px;
+  height: 40px;
+  margin: auto;
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(100% / 1.775 / 3);
+  opacity: 0.7;
+  z-index: 2;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.broadcast .gameShow .list .arrow_l:active,
+.broadcast .gameShow .list .arrow_r:active {
+  opacity: 1;
+}
+
+@media (any-hover: hover) {
+  .broadcast .gameShow .list .arrow_l:hover,
+  .broadcast .gameShow .list .arrow_r:hover {
+    opacity: 1;
+  }
+}
+
+.broadcast .gameShow .list .arrow_l::before,
+.broadcast .gameShow .list .arrow_r::before {
+  content: "";
+  width: 70%;
+  height: 70%;
+  margin: auto;
+  background: url(../images/icon/arrow-r.png) no-repeat center/cover;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.broadcast .gameShow .list .arrow_l::before {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.broadcast .gameShow .list .arrow_l {
+  left: 0;
+  -webkit-box-shadow: -1px 2px 3px #000;
+          box-shadow: -1px 2px 3px #000;
+}
+
+.broadcast .gameShow .list .arrow_r {
+  right: 0;
+  -webkit-box-shadow: 1px 2px 3px #000;
+          box-shadow: 1px 2px 3px #000;
+}
+
+.broadcast .gameShow .list .listArray {
+  overflow: hidden;
+}
+
+.broadcast .gameShow .list .listArray ul {
+  width: 250%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.broadcast .gameShow .list .listArray li {
+  width: 10%;
+  padding: 0 5px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  cursor: pointer;
+}
+
+.broadcast .gameShow .list .listArray li > div {
+  height: 100%;
+  padding-bottom: 20px;
+  color: #333;
+}
+
+.broadcast .gameShow .list .listArray_img {
+  margin-bottom: 10px;
+}
+
+.broadcast .gameShow .list .listArray_msg {
+  color: #000;
+  padding: 0 10px;
+  font-size: 1rem;
+  line-height: 22px;
+  font-weight: bold;
+}
+
+.broadcast .gameShow .list .listArray_msg span {
+  color: #888;
+  font-weight: normal;
+  font-size: 0.95rem;
+}
+
+.broadcast .gameShow .list .listArray_msg p {
+  padding-top: 5px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  white-space: normal;
+}
+
+.broadcast .gameResults {
+  width: 250px;
+  background-color: #0af;
 }
 
 .dialogBox {
