--- a/css/_page.scss
+++ b/css/_page.scss
@@ -33,7 +33,6 @@
             padding: 0 10px;
         }
     }
-
     table {
         width: 100%;
         background-color: #444;
@@ -42,7 +41,6 @@
     tr {
         width: 100%;
         position: relative;
-
         & .betNb {
             width: 81px;
             height: 57px;
@@ -63,7 +61,6 @@
                 text-shadow: -2px 0 3px #000;
             }
         }
-
         @for $i from 1 through 3 {
             &:nth-child(#{$i}) .betNb {
                 background-image: url(../images/logo/betNb-#{$i}.png);
@@ -72,7 +69,6 @@
                 padding-bottom: 5px;
             }
         }
-
         @for $i from 4 through 10 {
             &:nth-child(#{$i}) .betNb::before {
                 content: "";
@@ -86,7 +82,7 @@
             }
         }
     }
-    tr + tr::before {
+    tr+tr::before {
         content: "";
         width: calc(100% - 40px);
         height: 1px;
@@ -96,7 +92,6 @@
         position: absolute;
         @include pos(tlr, 0);
     }
-
     th {
         height: 110px;
         padding: 0 20px;
@@ -113,12 +108,10 @@
             position: absolute;
             @include pos(tbr, 0);
         }
-
         .betLogo {
             width: 125px;
         }
     }
-
     td {
         width: 25%;
         height: 110px;
@@ -162,7 +155,6 @@
                 padding-left: 25px;
                 margin-bottom: 10px;
                 position: relative;
-
                 .ball {
                     width: 50px;
                     height: 50px;
@@ -206,7 +198,7 @@
         .betBtn {
             display: flex;
             cursor: pointer;
-            & > .btn {
+            &>.btn {
                 height: 40px;
                 border-radius: 20px;
                 flex: 1;
@@ -228,8 +220,7 @@
                     }
                 }
             }
-
-            & > .btn + .btn {
+            &>.btn+.btn {
                 margin-left: 10px;
             }
         }
@@ -256,7 +247,7 @@
         margin-bottom: 15px;
         display: inline-block;
     }
-    & > div + div {
+    &>div+div {
         margin-top: 40px;
     }
 }
@@ -300,17 +291,15 @@
                     @include txtChip(3);
                 }
             }
-            li + li {
+            li+li {
                 margin-top: 10px;
             }
         }
     }
-
     .mainNews_b {
         ul {
             display: flex;
         }
-
         li {
             flex: 1;
             p {
@@ -319,8 +308,7 @@
                 @include txtChip(3);
             }
         }
-
-        li + li {
+        li+li {
             margin-left: 20px;
         }
     }
@@ -330,7 +318,7 @@
 .mainScore {
     .scoreCnt {
         width: 100%;
-        height: 800px;
+        height: 580px;
         iframe {
             transform: scale(2);
             transform-origin: top left;
@@ -343,7 +331,7 @@
 .mainRec {
     display: flex;
     justify-content: space-between;
-    & > div {
+    &>div {
         width: calc(50% - 10px);
     }
     .recCount {
@@ -354,7 +342,7 @@
             display: flex;
             flex-direction: column;
             justify-content: space-between;
-            & > div {
+            &>div {
                 display: flex;
                 color: #000;
             }
@@ -402,7 +390,6 @@
                     transform: translateX(-150%) skew(30deg);
                     transition: 0.5s;
                 }
-
                 &:hover::before {
                     transform: translateX(-10%) skew(30deg);
                 }
@@ -413,7 +400,7 @@
 
 // wsDict start
 .wsDict {
-    & > div {
+    &>div {
         display: flex;
     }
     .wsDict_msg {
@@ -447,7 +434,7 @@
     }
     .lotteryList {
         padding-left: 10px;
-        & > li {
+        &>li {
             display: flex;
             .icon {
                 width: 21px;
@@ -457,11 +444,10 @@
                 margin-right: 15px;
             }
         }
-        & > li + li {
+        &>li+li {
             margin-top: 20px;
         }
     }
-
     .lotteryMsg {
         li {
             line-height: 25px;
@@ -502,7 +488,7 @@
                 span {
                     font-size: 1rem;
                 }
-                span + span {
+                span+span {
                     margin-left: 10px;
                 }
             }
@@ -518,7 +504,7 @@
             }
         }
     }
-    li + li {
+    li+li {
         &::before {
             content: "";
             width: 100%;
@@ -564,7 +550,7 @@
             li {
                 flex: 1;
                 padding: 0 10px;
-                & > div {
+                &>div {
                     height: 100%;
                     padding-bottom: 20px;
                     display: flex;
@@ -572,7 +558,7 @@
                     box-shadow: 2px 2px 10px #000;
                     transition: 0.5s;
                 }
-                &:hover > div {
+                &:hover>div {
                     transform: translateY(-4px);
                     background-color: #fff;
                     color: #000;
@@ -617,7 +603,6 @@
     .gameShow {
         width: calc(100% - 250px);
         margin-right: 20px;
-
         .main {
             width: calc(100% - 10px);
             height: 0;
@@ -665,13 +650,12 @@
                 margin: auto;
                 background: url(../images/icon/arrow-r.png) no-repeat center / cover;
                 position: absolute;
-                @include pos(tblr, 0);
+                @include pos(tblr,
+                0);
             }
-
             .arrow_l::before {
                 transform: rotate(180deg);
             }
-
             .arrow_l {
                 left: 0;
                 box-shadow: -1px 2px 3px #000;
@@ -680,7 +664,7 @@
                 right: 0;
                 box-shadow: 1px 2px 3px #000;
             }
-            .listArray{          
+            .listArray {
                 overflow: hidden;
                 ul {
                     width: 250%;
@@ -692,35 +676,34 @@
                     padding: 0 5px;
                     flex: 1;
                     cursor: pointer;
-                    & > div {
+                    &>div {
                         height: 100%;
                         padding-bottom: 20px;
                         color: #333;
                     }
                 }
-            }  
+            }
             .listArray_img {
                 margin-bottom: 10px;
             }
             .listArray_msg {
-                color: #000; 
-                padding: 0 10px;   
+                color: #000;
+                padding: 0 10px;
                 font-size: 1rem;
                 line-height: 22px;
                 font-weight: bold;
                 span {
                     color: #888;
                     font-weight: normal;
-                    font-size: 0.95rem;  
+                    font-size: 0.95rem;
                 }
-                p {   
+                p {
                     padding-top: 5px;
                     @include txtChip(3);
                 }
             }
         }
     }
-
     .gameResults {
         width: 250px;
         background-color: #0af;
