--- a/css/_main.scss
+++ b/css/_main.scss
@@ -296,9 +296,14 @@ body {
             }
         }
 
-        .contBox-min {
+        &>.contBox-min {
+            padding: 0;
             display: flex;
+            flex-direction: column;
             position: relative;
+            &>.flexAd{
+                padding: 0 20px;
+            }
         }
         .leftTool,
         .rightTool {
@@ -412,8 +417,7 @@ body {
 }
 
 .content {
-    max-width: $count-maxW;
-    min-width: $count-minW;
+    width: 100%;
     min-height: calc(100vh - 463px);
     margin: auto;
     padding-bottom: 20px;
